fixed scrollbar style

--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -83,11 +83,5 @@ app-reply {
 }
 
 app-messages {
-    scrollbar-width: none !important;
     -ms-overflow-style: none !important;
-}
-
-app-messages::-webkit-scrollbar {
-    width: 0 !important;
-    height: 0 !important;
 }
